--- a/index.html
+++ b/index.html
@@ -6,10 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    <h2>index</h2>
-    <a href="/view/test.html">to test</a>
-    <div>
-        <img src="/imgs/201604131460701467_1.jpg" alt="">
-    </div>
+    <a href="/view/">to view index</a>
+    <a href="/view/test.html">to view test</a>
+    
 </body>
 </html>
