링크 경로 수정

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    <a href="/view/">to view index</a>
-    <a href="/view/test.html">to view test</a>
+    <a href="./view/">to view index</a>
+    <a href="./view/test.html">to view test</a>
     
 </body>
 </html>
